--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
    <meta charset="UTF-8">
+   <meta lang="ru">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Mesto</title>
@@ -16,8 +17,8 @@
          <img src="./images/Avatar.png" alt="Аватарка" class="profile__avatar">
          <div class="profile__info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <p class="profile__job">Исследователь океана</p>
             <img src="./images/Edit-Button.svg" alt="Редактор-профиля" class="profile__button">
+            <p class="profile__job">Исследователь океана</p>
          </div>
          <button class="profile__add-button"><img src="./images/Vector(1).svg" alt="Плюс"></button>
       </section>
@@ -72,10 +73,10 @@
    <section class="popup">
       <div class="popup__container">
          <h2 class="popup__title">Редактировать профиль</h2>
-         <form action="#" class="popup__form">
-            <input type="text" class="popup__field1" placeholder="Имя">
-            <input type="text" class="popup__field2" placeholder="О себе">
-            <button class="popup__button" value="" type="submit">Сохранить</button>
+         <form action="#" class="form">
+            <input type="text" class="form__input-name" placeholder="Имя">
+            <input type="text" class="form__input-job" placeholder="О себе">
+            <button class="form__button" value="" type="submit">Сохранить</button>
          </form>
          <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close">
       </div>
