--- a/index.html
+++ b/index.html
@@ -16,70 +16,74 @@
          <img src="./images/Avatar.png" alt="Аватарка" class="profile__avatar">
          <div class="profile__info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <img src="./images/Edit-Button.svg" alt="Редактор-профиля" class="profile__button">
+            <button type="button" class="button profile__button"></button>
             <p class="profile__job">Исследователь океана</p>
          </div>
-         <button class="profile__add-button"><img src="./images/Vector(1).svg" alt="Плюс"></button>
+         <button class="profile__add-button" type="button">
+            <img src="./images/Vector(1).svg" alt="Плюс" class="profile__add-plus">
+         </button>
       </section>
       <section class="elements">
-         <div class="element">
+         <article class="element">
             <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
             <div class="element__place">
                <h2 class="element__title">Карачаевск</h2>
-               <img src="./images/Group.svg" alt="Сердце" class="element__icon">
+               <button type="button" class="element__icon button"></button>
             </div>
-         </div>
-         <div class="element">
+         </article>
+         <article class="element">
             <img src="./images/albrus.jpg" alt="Гора-Эльбрус" class="element__image">
             <div class="element__place">
                <h2 class="element__title">Гора Эльбрус</h2>
-               <img src="./images/Group.svg" alt="Сердце" class="element__icon">
+               <button type="button" class="element__icon button"></button>
             </div>
-         </div>
-         <div class="element">
+         </article>
+         <article class="element">
             <img src="./images/dombay.jpg" alt="Домбай" class="element__image">
             <div class="element__place">
                <h2 class="element__title">Домбай</h2>
-               <img src="./images/Group.svg" alt="Сердце" class="element__icon">
+               <button type="button" class="element__icon button"></button>
             </div>
-         </div>
-         <div class="element">
+         </article>
+         <article class="element">
             <img src="./images/albrus.jpg" alt="Гора-Эльбрус" class="element__image">
             <div class="element__place">
                <h2 class="element__title">Гора Эльбрус</h2>
-               <img src="./images/Group.svg" alt="Сердце" class="element__icon">
+               <button type="button" class="element__icon button"></button>
             </div>
-         </div>
-         <div class="element">
+         </article>
+         <article class="element">
             <img src="./images/dombay.jpg" alt="Домбай" class="element__image">
             <div class="element__place">
                <h2 class="element__title">Домбай</h2>
-               <img src="./images/Group.svg" alt="Сердце" class="element__icon">
+               <button type="button" class="element__icon button"></button>
             </div>
-         </div>
-         <div class="element">
+         </article>
+         <article class="element">
             <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
             <div class="element__place">
                <h2 class="element__title">Карачаево-Черкессия</h2>
-               <img src="./images/Group.svg" alt="Сердце" class="element__icon">
+               <button type="button" class="element__icon button"></button>
             </div>
-         </div>
+         </article>
       </section>
    </main>
    <footer class="footer">
       <p class="footer__text">© 2020 Mesto Russia</p>
    </footer>
-   <section class="popup">
+   <div class="popup">
       <div class="popup__container">
          <h2 class="popup__title">Редактировать профиль</h2>
-         <form action="#" class="form">
-            <input type="text" class="form__input-name" placeholder="Имя">
-            <input type="text" class="form__input-job" placeholder="О себе">
+         <form action="#" name="profile-form" class="form">
+            <input type="text" name="text-name" class="form__input form__input_place_name" placeholder="Имя" required>
+            <input type="text" name="text-job" class="form__input form__input_place_job" placeholder="О себе" required>
             <button class="form__button" value="" type="submit">Сохранить</button>
          </form>
-         <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close">
+         <button type="button" class="button">
+            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close">
+         </button>
       </div>
-   </section>
+   </div>
    <script src="./scripts/index.js"></script>
 </body>
 </html>
