feature: second commit 5 project

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="popup-el">
         <div class="popup-el__container">
             <h2 class="popup-el__title">Новое место</h2>
-            <form action="#" name="profile-form" class="form">
+            <form action="#" name="profile-form" class="form form_type_addCard">
                 <input type="text" name="text-title" class="form__input form__input_place_title" placeholder="Название" required>
                 <input type="text" name="text-url" class="form__input form__input_place_url" placeholder="Ссылка на картинку" required>
                 <button class="form__button" value="#" type="submit">Создать</button>
