--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
         <div class="popup-photo__container">
             <img src="./images/karachaevsk.jpg" alt="Фото" class="popup-photo__item">
             <h2 class="popup-photo__subtitle">Карачаевск</h2>
+         <button type="button" class="button">
             <img src="./images/Close-Icon.svg" alt="Крестик" class="popup-photo__close">
          </button>
         </div>
