--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
          <img src="./images/delete.svg" alt="Удаление" class="element__delete">
      </article>
     </template>
-    <div class="popup">
+    <div class="popup profile-popup">
         <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
             <form action="#" name="profile-form" class="form">
@@ -51,34 +51,33 @@
                 <button class="form__button" value="" type="submit">Сохранить</button>
             </form>
             <button type="button" class="button">
-            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close">
+            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close popup-profile-close">
          </button>
         </div>
     </div>
-    <div class="popup-el">
-        <div class="popup-el__container">
-            <h2 class="popup-el__title">Новое место</h2>
+    <div class="popup card-popup">
+        <div class="popup__container">
+            <h2 class="popup__title">Новое место</h2>
             <form action="#" name="profile-form" class="form form_type_addCard">
                 <input type="text" name="text-title" class="form__input form__input_place_title" placeholder="Название" required>
                 <input type="text" name="text-url" class="form__input form__input_place_url" placeholder="Ссылка на картинку" required>
                 <button class="form__button" value="#" type="submit">Создать</button>
             </form>
             <button type="button" class="button">
-            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup-el__close">
+            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close popup-card-close">
          </button>
         </div>
     </div>
-    <div class="popup-photo">
-        <div class="popup-photo__container">
-            <img src="./images/karachaevsk.jpg" alt="Фото" class="popup-photo__item">
-            <h2 class="popup-photo__subtitle">Карачаевск</h2>
+    <div class="popup popup-photo">
+        <div class="popup__content">
+            <img src="./images/karachaevsk.jpg" alt="Фото" class="popup__item">
+            <h2 class="popup__subtitle">Карачаевск</h2>
          <button type="button" class="button">
-            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup-photo__close">
+            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close popup-photo-close">
          </button>
         </div>
     </div>
     <script src="./scripts/index.js"></script>
-    <script src="./scripts/elements.js"></script>
 </body>
 
 </html>
