--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
     <div class="popup profile-popup">
         <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form action="#" name="profile-form" class="form">
-                <input type="text" name="text-name" class="form__input form__input_place_name" placeholder="Имя" required>
-                <input type="text" name="text-job" class="form__input form__input_place_job" placeholder="О себе" required>
-                <button class="form__button" value="" type="submit">Сохранить</button>
+            <form action="#" name="profile-form" class="form" novalidate>
+                <input type="text" name="text-name" class="form__input form__input_place_name" placeholder="Имя" required minlength="2" maxlength="40">
+                <span id="text-name-error" class="popup-error"></span>
+                <input type="text" name="text-job" class="form__input form__input_place_job" placeholder="О себе" required minlength="2" maxlength="200">
+                <span id="text-job-error" class="popup-error"></span>
+                <button class="form__button form__button_type_profile" value="" type="submit">Сохранить</button>
             </form>
             <button type="button" class="button">
             <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close popup-profile-close">
@@ -58,10 +60,12 @@
     <div class="popup card-popup">
         <div class="popup__container">
             <h2 class="popup__title">Новое место</h2>
-            <form action="#" name="profile-form" class="form form_type_addCard">
-                <input type="text" name="text-title" class="form__input form__input_place_title" placeholder="Название" required>
-                <input type="text" name="text-url" class="form__input form__input_place_url" placeholder="Ссылка на картинку" required>
-                <button class="form__button" value="#" type="submit">Создать</button>
+            <form action="#" name="profile-form" class="form form_type_addCard" novalidate>
+                <input type="text" name="text-title" class="form__input form__input_place_title" placeholder="Название" required minlength="2" maxlength="30">
+                <span id="text-title-error" class="popup-error"></span>
+                <input type="url" name="text-url" class="form__input form__input_place_url" placeholder="Ссылка на картинку" required>
+                <span id="text-url-error" class="popup-error"></span>
+                <button class="form__button form__button_type_place" value="#" type="submit">Создать</button>
             </form>
             <button type="button" class="button">
             <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close popup-card-close">
@@ -77,6 +81,7 @@
          </button>
         </div>
     </div>
+    <script src="./scripts/validate.js"></script>
     <script src="./scripts/index.js"></script>
 </body>
 
