--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="popup profile-popup">
         <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form action="#" name="profile-form" class="form" novalidate>
+            <form action="#" name="profile-form" class="form form_type_profile" novalidate>
                 <input type="text" name="text-name" class="form__input form__input_place_name" placeholder="Имя" required minlength="2" maxlength="40">
                 <span id="text-name-error" class="popup-error"></span>
                 <input type="text" name="text-job" class="form__input form__input_place_job" placeholder="О себе" required minlength="2" maxlength="200">
@@ -60,7 +60,7 @@
     <div class="popup card-popup">
         <div class="popup__container">
             <h2 class="popup__title">Новое место</h2>
-            <form action="#" name="profile-form" class="form form_type_addCard" novalidate>
+            <form action="#" name="card-form" class="form form_type_addCard" novalidate>
                 <input type="text" name="text-title" class="form__input form__input_place_title" placeholder="Название" required minlength="2" maxlength="30">
                 <span id="text-title-error" class="popup-error"></span>
                 <input type="url" name="text-url" class="form__input form__input_place_url" placeholder="Ссылка на картинку" required>
@@ -72,7 +72,7 @@
          </button>
         </div>
     </div>
-    <div class="popup popup-photo">
+    <div class="popup popup-photo popup_opacity">
         <div class="popup__content">
             <img src="./images/karachaevsk.jpg" alt="Фото" class="popup__item">
             <h2 class="popup__subtitle">Карачаевск</h2>
