--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
          </button>
         </div>
     </div>
+
     <script src="./scripts/validate.js"></script>
-    <script src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
 </body>
 
 </html>
