--- a/src/index.html
+++ b/src/index.html
@@ -6,23 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mesto</title>
-    <link rel="stylesheet" href="./pages/index.css">
+    <!-- <link rel="stylesheet" href="./pages/index.css"> -->
 </head>
 
 <body class="page">
     <header class="header">
-        <img src="./images/logo.svg" alt="Место-Россия" class="header__logo">
+        <img src="<%=require('./images/logo.svg')%>" alt="Место-Россия" class="header__logo">
     </header>
     <main class="main">
         <section class="profile">
-            <img src="./images/Avatar.png" alt="Аватарка" class="profile__avatar">
+            <img src="<%=require('./images/Avatar.png')%>" alt="Аватарка" class="profile__avatar">
             <div class="profile__info">
                 <h1 class="profile__name">Жак-Ив Кусто</h1>
                 <button type="button" class="button profile__button"></button>
                 <p class="profile__job">Исследователь океана</p>
             </div>
             <button class="profile__add-button" type="button">
-            <img src="./images/Vector(1).svg" alt="Плюс" class="profile__add-plus">
+            <img src="<%=require('./images/Vector(1).svg')%>" alt="Плюс" class="profile__add-plus">
          </button>
         </section>
         <section class="elements">
@@ -34,26 +34,26 @@
     </footer>
     <template class="template">
       <article class="element" id="element">
-         <img src="./images/karachaevsk.jpg" alt="Карачаевск" class="element__image">
+         <img src="<%=require('./images/karachaevsk.jpg')%>" alt="Карачаевск" class="element__image">
          <div class="element__place">
              <h2 class="element__title">Карачаево-Черкессия</h2>
              <button type="button" class="element__icon button"></button>
          </div>
-         <img src="./images/delete.svg" alt="Удаление" class="element__delete">
+         <img src="<%=require('./images/delete.svg')%>" alt="Удаление" class="element__delete">
      </article>
     </template>
     <div class="popup profile-popup">
         <div class="popup__container">
             <h2 class="popup__title">Редактировать профиль</h2>
             <form action="#" name="profile-form" class="form form_type_profile" novalidate>
-                <input type="text" name="text-name" class="form__input form__input_place_name" placeholder="Имя" required minlength="2" maxlength="40">
-                <span id="text-name-error" class="popup-error"></span>
-                <input type="text" name="text-job" class="form__input form__input_place_job" placeholder="О себе" required minlength="2" maxlength="200">
-                <span id="text-job-error" class="popup-error"></span>
+                <input type="text" name="name" class="form__input form__input_place_name" placeholder="Имя" required minlength="2" maxlength="40">
+                <span id="name-error" class="popup-error"></span>
+                <input type="text" name="job" class="form__input form__input_place_job" placeholder="О себе" required minlength="2" maxlength="200">
+                <span id="job-error" class="popup-error"></span>
                 <button class="form__button form__button_type_profile" value="" type="submit">Сохранить</button>
             </form>
             <button type="button" class="button">
-            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close popup-profile-close">
+            <img src="<%=require('./images/Close-Icon.svg')%>" alt="Крестик" class="popup__close popup-profile-close">
          </button>
         </div>
     </div>
@@ -61,14 +61,14 @@
         <div class="popup__container">
             <h2 class="popup__title">Новое место</h2>
             <form action="#" name="card-form" class="form form_type_addCard" novalidate>
-                <input type="text" name="text-title" class="form__input form__input_place_title" placeholder="Название" required minlength="2" maxlength="30">
-                <span id="text-title-error" class="popup-error"></span>
-                <input type="url" name="text-url" class="form__input form__input_place_url" placeholder="Ссылка на картинку" required>
-                <span id="text-url-error" class="popup-error"></span>
+                <input type="text" name="title" class="form__input form__input_place_title" placeholder="Название" required minlength="2" maxlength="30">
+                <span id="title-error" class="popup-error"></span>
+                <input type="url" name="url" class="form__input form__input_place_url" placeholder="Ссылка на картинку" required>
+                <span id="url-error" class="popup-error"></span>
                 <button class="form__button form__button_type_place" value="#" type="submit">Создать</button>
             </form>
             <button type="button" class="button">
-            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close popup-card-close">
+            <img src="<%=require('./images/Close-Icon.svg')%>" alt="Крестик" class="popup__close popup-card-close">
          </button>
         </div>
     </div>
@@ -77,13 +77,13 @@
             <img src="./images/karachaevsk.jpg" alt="Фото" class="popup__item">
             <h2 class="popup__subtitle">Карачаевск</h2>
          <button type="button" class="button">
-            <img src="./images/Close-Icon.svg" alt="Крестик" class="popup__close popup-photo-close">
+            <img src="<%=require('./images/Close-Icon.svg')%>" alt="Крестик" class="popup__close popup-photo-close">
          </button>
         </div>
     </div>
 
     <!-- <script src="./scripts/validate.js"></script> -->
-    <script type="module" src="./scripts/index.js"></script>
+    <!-- <script type="module" src="./scripts/index.js"></script> -->
 </body>
 
 </html>
