--- a/src/index.html
+++ b/src/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="popup popup-photo popup_opacity">
         <div class="popup__content">
-            <img src="./images/karachaevsk.jpg" alt="Фото" class="popup__item">
+            <img src="<%=require('./images/karachaevsk.jpg')%>" alt="Фото" class="popup__item">
             <h2 class="popup__subtitle">Карачаевск</h2>
          <button type="button" class="button">
             <img src="<%=require('./images/Close-Icon.svg')%>" alt="Крестик" class="popup__close popup-photo-close">
